bison/omicron.output
Terminales no usados en la gramática

   TOK_FLECHA
   TOK_ERROR
   TOK_FOR
   TOK_SWITCH
   TOK_CASE
   TOK_DEFAULT
   TOK_FLOAT
   TOK_MALLOC
   TOK_CPRINTF
   TOK_FREE
   TOK_SET
   TOK_OF
   TOK_UNION
   TOK_INTERSECTION
   TOK_ADD
   TOK_CLEAR
   TOK_SIZE
   TOK_CONTAINS
   TOK_CONSTANTE_REAL


Estado 176 conflictos: 1 reducción/reducción


Gramática

    0 $accept: programa $end

    1 programa: TOK_MAIN '{' declaraciones funciones sentencias '}'
    2         | TOK_MAIN '{' funciones sentencias '}'

    3 declaraciones: declaracion
    4              | declaracion declaraciones

    5 declaracion: modificadores_acceso clase identificadores ';'
    6            | modificadores_acceso declaracion_clase ';'

    7 modificadores_acceso: TOK_HIDDEN TOK_UNIQUE
    8                     | TOK_SECRET TOK_UNIQUE
    9                     | TOK_EXPOSED TOK_UNIQUE
   10                     | TOK_HIDDEN
   11                     | TOK_SECRET
   12                     | TOK_EXPOSED
   13                     | TOK_UNIQUE
   14                     | %empty

   15 clase: clase_escalar
   16      | clase_vector
   17      | clase_objeto

   18 declaracion_clase: modificadores_clase TOK_CLASS TOK_IDENTIFICADOR TOK_INHERITS identificadores '{' declaraciones funciones '}'
   19                  | modificadores_clase TOK_CLASS TOK_IDENTIFICADOR TOK_INHERITS identificadores '{' funciones '}'
   20                  | modificadores_clase TOK_CLASS TOK_IDENTIFICADOR '{' declaraciones funciones '}'

   21 modificadores_clase: %empty

   22 clase_escalar: tipo

   23 tipo: TOK_INT
   24     | TOK_BOOLEAN

   25 clase_objeto: '{' TOK_IDENTIFICADOR '}'

   26 clase_vector: TOK_ARRAY tipo '[' TOK_CONSTANTE_ENTERA ']'

   27 identificadores: TOK_IDENTIFICADOR
   28                | TOK_IDENTIFICADOR ',' identificadores

   29 funciones: funcion funciones
   30          | %empty

   31 funcion: TOK_FUNCTION modificadores_acceso tipo_retorno TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

   32 tipo_retorno: TOK_NONE
   33             | tipo
   34             | clase_objeto

   35 parametros_funcion: parametro_funcion resto_parametros_funcion
   36                   | clase_objeto TOK_IDENTIFICADOR
   37                   | %empty

   38 resto_parametros_funcion: ';' parametro_funcion resto_parametros_funcion
   39                         | %empty

   40 parametro_funcion: tipo TOK_IDENTIFICADOR
   41                  | clase_objeto TOK_IDENTIFICADOR

   42 declaraciones_funcion: %empty
   43                      | declaraciones

   44 sentencias: sentencia
   45           | sentencia sentencias

   46 sentencia: sentencia_simple ';'
   47          | bloque

   48 sentencia_simple: asignacion
   49                 | lectura
   50                 | escritura
   51                 | retorno_funcion
   52                 | identificador_clase '.' TOK_IDENTIFICADOR '(' lista_expresiones ')'
   53                 | TOK_IDENTIFICADOR '(' lista_expresiones ')'
   54                 | destruir_objeto

   55 destruir_objeto: TOK_DISCARD TOK_IDENTIFICADOR

   56 bloque: condicional
   57       | bucle

   58 asignacion: TOK_IDENTIFICADOR '=' exp
   59           | elemento_vector '=' exp
   60           | elemento_vector '=' TOK_INSTANCE_OF TOK_IDENTIFICADOR '(' lista_expresiones ')'
   61           | TOK_IDENTIFICADOR '=' TOK_INSTANCE_OF TOK_IDENTIFICADOR '(' lista_expresiones ')'
   62           | identificador_clase '.' TOK_IDENTIFICADOR '=' exp

   63 elemento_vector: TOK_IDENTIFICADOR '[' exp ']'

   64 condicional: TOK_IF '(' exp ')' '{' sentencias '}'
   65            | TOK_IF '(' exp ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'

   66 bucle: TOK_WHILE '(' exp ')' '{' sentencias '}'

   67 lectura: TOK_SCANF TOK_IDENTIFICADOR
   68        | TOK_SCANF elemento_vector

   69 escritura: TOK_PRINTF exp

   70 retorno_funcion: TOK_RETURN exp
   71                | TOK_RETURN TOK_NONE

   72 exp: exp '+' exp
   73    | exp '-' exp
   74    | exp '/' exp
   75    | exp '*' exp
   76    | '-' exp
   77    | exp TOK_AND exp
   78    | exp TOK_OR exp
   79    | '!' exp
   80    | TOK_IDENTIFICADOR
   81    | constante
   82    | '(' exp ')'
   83    | '(' comparacion ')'
   84    | elemento_vector
   85    | TOK_IDENTIFICADOR '(' lista_expresiones ')'
   86    | identificador_clase '.' TOK_IDENTIFICADOR '(' lista_expresiones ')'
   87    | identificador_clase '.' TOK_IDENTIFICADOR

   88 identificador_clase: TOK_IDENTIFICADOR
   89                    | TOK_ITSELF

   90 lista_expresiones: exp resto_lista_expresiones
   91                  | %empty

   92 resto_lista_expresiones: ',' exp resto_lista_expresiones
   93                        | %empty

   94 comparacion: exp TOK_IGUAL exp
   95            | exp TOK_DISTINTO exp
   96            | exp TOK_MAYORIGUAL exp
   97            | exp TOK_MENORIGUAL exp
   98            | exp '>' exp
   99            | exp '<' exp

  100 constante: constante_logica
  101          | constante_entera

  102 constante_logica: TOK_TRUE
  103                 | TOK_FALSE

  104 constante_entera: TOK_CONSTANTE_ENTERA


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 79
'(' (40) 31 52 53 60 61 64 65 66 82 83 85 86
')' (41) 31 52 53 60 61 64 65 66 82 83 85 86
'*' (42) 75
'+' (43) 72
',' (44) 28 92
'-' (45) 73 76
'.' (46) 52 62 86 87
'/' (47) 74
';' (59) 5 6 38 46
'<' (60) 99
'=' (61) 58 59 60 61 62
'>' (62) 98
'[' (91) 26 63
']' (93) 26 63
'{' (123) 1 2 18 19 20 25 31 64 65 66
'}' (125) 1 2 18 19 20 25 31 64 65 66
error (256)
TOK_NONE (258) 32 71
TOK_CLASS (259) 18 19 20
TOK_INHERITS (260) 18 19
TOK_INSTANCE_OF (261) 60 61
TOK_DISCARD (262) 55
TOK_ITSELF (263) 89
TOK_FLECHA (264)
TOK_HIDDEN (265) 7 10
TOK_SECRET (266) 8 11
TOK_EXPOSED (267) 9 12
TOK_UNIQUE (268) 7 8 9 13
TOK_FUNCTION (269) 31
TOK_RETURN (270) 70 71
TOK_MAIN (271) 1 2
TOK_INT (272) 23
TOK_BOOLEAN (273) 24
TOK_ARRAY (274) 26
TOK_IF (275) 64 65
TOK_ELSE (276) 65
TOK_WHILE (277) 66
TOK_SCANF (278) 67 68
TOK_PRINTF (279) 69
TOK_IDENTIFICADOR (280) 18 19 20 25 27 28 31 36 40 41 52 53 55 58 60
    61 62 63 67 80 85 86 87 88
TOK_IGUAL (281) 94
TOK_DISTINTO (282) 95
TOK_MENORIGUAL (283) 97
TOK_MAYORIGUAL (284) 96
TOK_OR (285) 78
TOK_AND (286) 77
TOK_CONSTANTE_ENTERA (287) 26 104
TOK_FALSE (288) 103
TOK_TRUE (289) 102
TOK_ERROR (290)
TOK_FOR (291)
TOK_SWITCH (292)
TOK_CASE (293)
TOK_DEFAULT (294)
TOK_FLOAT (295)
TOK_MALLOC (296)
TOK_CPRINTF (297)
TOK_FREE (298)
TOK_SET (299)
TOK_OF (300)
TOK_UNION (301)
TOK_INTERSECTION (302)
TOK_ADD (303)
TOK_CLEAR (304)
TOK_SIZE (305)
TOK_CONTAINS (306)
TOK_CONSTANTE_REAL (307)
MENOSU (308)


No terminales con las reglas donde aparecen

$accept (71)
    en la izquierda: 0
programa (72)
    en la izquierda: 1 2, en la derecha: 0
declaraciones (73)
    en la izquierda: 3 4, en la derecha: 1 4 18 20 43
declaracion (74)
    en la izquierda: 5 6, en la derecha: 3 4
modificadores_acceso (75)
    en la izquierda: 7 8 9 10 11 12 13 14, en la derecha: 5 6 31
clase (76)
    en la izquierda: 15 16 17, en la derecha: 5
declaracion_clase (77)
    en la izquierda: 18 19 20, en la derecha: 6
modificadores_clase (78)
    en la izquierda: 21, en la derecha: 18 19 20
clase_escalar (79)
    en la izquierda: 22, en la derecha: 15
tipo (80)
    en la izquierda: 23 24, en la derecha: 22 26 33 40
clase_objeto (81)
    en la izquierda: 25, en la derecha: 17 34 36 41
clase_vector (82)
    en la izquierda: 26, en la derecha: 16
identificadores (83)
    en la izquierda: 27 28, en la derecha: 5 18 19 28
funciones (84)
    en la izquierda: 29 30, en la derecha: 1 2 18 19 20 29
funcion (85)
    en la izquierda: 31, en la derecha: 29
tipo_retorno (86)
    en la izquierda: 32 33 34, en la derecha: 31
parametros_funcion (87)
    en la izquierda: 35 36 37, en la derecha: 31
resto_parametros_funcion (88)
    en la izquierda: 38 39, en la derecha: 35 38
parametro_funcion (89)
    en la izquierda: 40 41, en la derecha: 35 38
declaraciones_funcion (90)
    en la izquierda: 42 43, en la derecha: 31
sentencias (91)
    en la izquierda: 44 45, en la derecha: 1 2 31 45 64 65 66
sentencia (92)
    en la izquierda: 46 47, en la derecha: 44 45
sentencia_simple (93)
    en la izquierda: 48 49 50 51 52 53 54, en la derecha: 46
destruir_objeto (94)
    en la izquierda: 55, en la derecha: 54
bloque (95)
    en la izquierda: 56 57, en la derecha: 47
asignacion (96)
    en la izquierda: 58 59 60 61 62, en la derecha: 48
elemento_vector (97)
    en la izquierda: 63, en la derecha: 59 60 68 84
condicional (98)
    en la izquierda: 64 65, en la derecha: 56
bucle (99)
    en la izquierda: 66, en la derecha: 57
lectura (100)
    en la izquierda: 67 68, en la derecha: 49
escritura (101)
    en la izquierda: 69, en la derecha: 50
retorno_funcion (102)
    en la izquierda: 70 71, en la derecha: 51
exp (103)
    en la izquierda: 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87,
    en la derecha: 58 59 62 63 64 65 66 69 70 72 73 74 75 76 77 78
    79 82 90 92 94 95 96 97 98 99
identificador_clase (104)
    en la izquierda: 88 89, en la derecha: 52 62 86 87
lista_expresiones (105)
    en la izquierda: 90 91, en la derecha: 52 53 60 61 85 86
resto_lista_expresiones (106)
    en la izquierda: 92 93, en la derecha: 90 92
comparacion (107)
    en la izquierda: 94 95 96 97 98 99, en la derecha: 83
constante (108)
    en la izquierda: 100 101, en la derecha: 81
constante_logica (109)
    en la izquierda: 102 103, en la derecha: 100
constante_entera (110)
    en la izquierda: 104, en la derecha: 101


Estado 0

    0 $accept: . programa $end

    TOK_MAIN  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    1 programa: TOK_MAIN . '{' declaraciones funciones sentencias '}'
    2         | TOK_MAIN . '{' funciones sentencias '}'

    '{'  desplazar e ir al estado 3


Estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 programa: TOK_MAIN '{' . declaraciones funciones sentencias '}'
    2         | TOK_MAIN '{' . funciones sentencias '}'

    TOK_HIDDEN    desplazar e ir al estado 5
    TOK_SECRET    desplazar e ir al estado 6
    TOK_EXPOSED   desplazar e ir al estado 7
    TOK_UNIQUE    desplazar e ir al estado 8
    TOK_FUNCTION  desplazar e ir al estado 9

    TOK_CLASS    reduce usando la regla 14 (modificadores_acceso)
    TOK_INT      reduce usando la regla 14 (modificadores_acceso)
    TOK_BOOLEAN  reduce usando la regla 14 (modificadores_acceso)
    TOK_ARRAY    reduce usando la regla 14 (modificadores_acceso)
    '{'          reduce usando la regla 14 (modificadores_acceso)
    $default     reduce usando la regla 30 (funciones)

    declaraciones         ir al estado 10
    declaracion           ir al estado 11
    modificadores_acceso  ir al estado 12
    funciones             ir al estado 13
    funcion               ir al estado 14


Estado 4

    0 $accept: programa $end .

    $default  aceptar


Estado 5

    7 modificadores_acceso: TOK_HIDDEN . TOK_UNIQUE
   10                     | TOK_HIDDEN .

    TOK_UNIQUE  desplazar e ir al estado 15

    $default  reduce usando la regla 10 (modificadores_acceso)


Estado 6

    8 modificadores_acceso: TOK_SECRET . TOK_UNIQUE
   11                     | TOK_SECRET .

    TOK_UNIQUE  desplazar e ir al estado 16

    $default  reduce usando la regla 11 (modificadores_acceso)


Estado 7

    9 modificadores_acceso: TOK_EXPOSED . TOK_UNIQUE
   12                     | TOK_EXPOSED .

    TOK_UNIQUE  desplazar e ir al estado 17

    $default  reduce usando la regla 12 (modificadores_acceso)


Estado 8

   13 modificadores_acceso: TOK_UNIQUE .

    $default  reduce usando la regla 13 (modificadores_acceso)


Estado 9

   31 funcion: TOK_FUNCTION . modificadores_acceso tipo_retorno TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    TOK_HIDDEN   desplazar e ir al estado 5
    TOK_SECRET   desplazar e ir al estado 6
    TOK_EXPOSED  desplazar e ir al estado 7
    TOK_UNIQUE   desplazar e ir al estado 8

    $default  reduce usando la regla 14 (modificadores_acceso)

    modificadores_acceso  ir al estado 18


Estado 10

    1 programa: TOK_MAIN '{' declaraciones . funciones sentencias '}'

    TOK_FUNCTION  desplazar e ir al estado 9

    $default  reduce usando la regla 30 (funciones)

    funciones  ir al estado 19
    funcion    ir al estado 14


Estado 11

    3 declaraciones: declaracion .
    4              | declaracion . declaraciones

    TOK_HIDDEN   desplazar e ir al estado 5
    TOK_SECRET   desplazar e ir al estado 6
    TOK_EXPOSED  desplazar e ir al estado 7
    TOK_UNIQUE   desplazar e ir al estado 8

    TOK_CLASS    reduce usando la regla 14 (modificadores_acceso)
    TOK_INT      reduce usando la regla 14 (modificadores_acceso)
    TOK_BOOLEAN  reduce usando la regla 14 (modificadores_acceso)
    TOK_ARRAY    reduce usando la regla 14 (modificadores_acceso)
    '{'          reduce usando la regla 14 (modificadores_acceso)
    $default     reduce usando la regla 3 (declaraciones)

    declaraciones         ir al estado 20
    declaracion           ir al estado 11
    modificadores_acceso  ir al estado 12


Estado 12

    5 declaracion: modificadores_acceso . clase identificadores ';'
    6            | modificadores_acceso . declaracion_clase ';'

    TOK_INT      desplazar e ir al estado 21
    TOK_BOOLEAN  desplazar e ir al estado 22
    TOK_ARRAY    desplazar e ir al estado 23
    '{'          desplazar e ir al estado 24

    $default  reduce usando la regla 21 (modificadores_clase)
